--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/amethystnetwork-dev/Hypertabs"
   },
-  "keywords": ["amethystnetwork-dev"],
+  "keywords": [""],
   "author": "",
   "license": "GPL-3.0-or-later",
   "dependencies": {
