--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "hypertabs",
+  "name": "tabs",
   "version": "1.0.0",
-  "description": "Unofficial Hypertabs easy deployment version with TompHTTP bare server included.",
+  "description": "cool website",
   "type": "module",
   "scripts": {
     "start": "node src/index.js"
   },
-  "files": ["static", "src", ".gitignore", "app.json", ".replit", "replit.nix", "Procfile"],
-  "keywords": [""],
-  "author": "",
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@tomphttp/bare-server-node": "1.0.4-deps1",
